--- a/.github/workflows/create-release-on-tag.yml
+++ b/.github/workflows/create-release-on-tag.yml
@@ -56,8 +56,9 @@ jobs:
     - name: Prepare files for artifact
       run: |
         mkdir artifact
-        mv ./plugins ./artifact/
-        mv ./scripting ./artifact/
+        mv configs artifact
+        mv plugins artifact
+        mv scripting artifact
 
     - name: Zip plugin
       run : |
